feat(golang): Update main image to official golang image

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,8 +1,15 @@
 # Dockerfile provides minimal tooling and source dependency management for
 # any Go projects at Vungle.
 #
-# Tag: vungle/golang[:<go-semver>]; e.g. vungle/golang:1.5, vungle/golang:1.5.2.
-FROM golang:1.7
+# Tag: vungle/golang[:<go-semver>-alpine]; e.g. vungle/golang:1.5-alpine, vungle/golang:1.5.2-alpine.
+FROM golang:1.7-alpine
+
+RUN apk add -q --update \
+    && apk add -q \
+            bash \
+            git \
+            curl \
+    && rm -rf /var/cache/apk/*
 
 # OUTDIR specifies a directory in which projects can create output files so that
 # these output files can be consumed by other processes. Downstream projects can
@@ -29,7 +36,7 @@ RUN go get -u \
         github.com/golang/lint/golint \
     && rm -rf $GOPATH/src/* && rm -rf $GOPATH/pkg/*
 
-ENV GLIDE_VERSION v0.12.2
+ENV GLIDE_VERSION v0.12.1
 
 ##########################
 # Dependency Management
