--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -2,7 +2,7 @@
 # any Go projects at Vungle.
 #
 # Tag: vungle/golang[:<go-semver>-alpine]; e.g. vungle/golang:1.5-alpine, vungle/golang:1.5.2-alpine.
-FROM golang:1.8.3-alpine
+FROM golang:1.9.0-alpine
 
 RUN apk add -q --update \
     && apk add -q \
@@ -34,6 +34,10 @@ RUN go get -u \
 
         # Code analysis tool: golint.
         github.com/golang/lint/golint \
+        golang.org/x/tools/cmd/goimports \
+
+        # Semi-official dependency management.
+        github.com/golang/dep \
     && rm -rf $GOPATH/src/* && rm -rf $GOPATH/pkg/*
 
 ENV GLIDE_VERSION v0.12.1
