--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -34,6 +34,7 @@ RUN go install \
         golang.org/x/lint/golint@latest
 RUN go install \
         golang.org/x/tools/cmd/goimports@latest
+RUN rm -rf $GOPATH/src/* && rm -rf $GOPATH/pkg/*
 
 ##########################
 # Dependency Management
