--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,15 @@ services:
 
 language: go
 
+env:
+  - BUILD_SCOPE=$(cat .version && echo "-travis")
+
 install:
   # Add Docker's official GPG key:
   - sudo apt-get update
   - sudo apt-get install ca-certificates curl gnupg
   - sudo install -m 0755 -d /etc/apt/keyrings
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor --yes -o /etc/apt/keyrings/docker.gpg
   - sudo chmod a+r /etc/apt/keyrings/docker.gpg
 
   # Add the repository to Apt sources:
